app/ui/global.scss
body {
    margin: 0;
    padding: 0;
    color: white;
    font-family: Tahoma, Geneva, Verdana, sans-serif;
    font-size: small;
}

a {
    color: #5095e9;
}

.topbar {
    background-color: #121214;
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    gap: 0.5rem;
    justify-content: center;
    align-items: center;
    height: 33px;
}

.contenedor {
    display: flex;
    height: 100vh;
    overflow: hidden;
}

.sidebar {
    width: 320px;
    background-color: #121214;
    border-right: 1px solid #6d6e771f;
    position: sticky;
    top: 0;
    display: flex;
    flex-direction: column;
    max-height: 100vh;
    overflow-y: auto;
    padding-inline: 1rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    gap: 1rem;
}

.introduction {
    padding-top: 1rem;
    border-top: 1px solid #6d6e771f;
}

.introduction p {
    margin: 0;
}

.sidebar label {
    color: #fff;
    margin-bottom: -0.5rem;
}

.sidebar input,
.sidebar select {
    padding: 0.5rem;
    border: 1px solid #97979f33;
    border-radius: 8px;
    background-color: #00000014;
    color: #82838b;
    outline: none;
    transition: border 0.3s ease;

    &:focus {
        border: 1px solid #5197ed;
    }
}

.sidebar input {
    width: 94%;
}

.sidebar select {
    width: 100%;
}

.sidebar select option {
    background-color: #121214;
}

.multiSelect {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
}

#barra-superior {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0.4rem 1rem 0.2rem;
    background-color: #202024;
}

#barra-superior .bs-1 {
    color: #007bff;
}

#barra-superior .bs-2 {
    background-color: #81623a;
    border-radius: 3px;
    cursor: pointer;
}

#barra-superior .editado-activado {
    background-color: #ce9c5c;
}

#barra-superior .bs-3 {
    border-radius: 0.5rem;
    background-color: #202024;
    color: #f57976;
}

.results {
    flex: 1;
    display: flex;
    flex-direction: column;
    height: 100vh;
    overflow: hidden;
    background-color: #1a1a1e;
}

.table-container {
    flex: 1;
    overflow-y: auto;
    border-top: 1px solid #6d6e771f;
    border-bottom: 1px solid #6d6e771f;
}

table {
    width: 100%;
    border-collapse: collapse;
}

table td:nth-child(6),
table th:nth-child(6) {
    text-align: right;
}

thead {
    position: sticky;
    top: 0;
    background-color: #121214;
    z-index: 2;
    border-bottom: 1px solid #6d6e771f;
}

th, td {
    padding: 0.65rem;
    text-align: left;
}

th {
    .sort-arrow {
        cursor: pointer;
        user-select: none;
        margin-left: 0.5rem;
        font-size: 0.75rem;
        color: #999;
        font-weight: normal;
  }
}


td {
    border-bottom: 1px solid #6d6e771f;
}

td a {
    background-color: #292c51;
    transition: background-color 50ms ease-out,color 50ms ease-out;
    padding: 0.2rem;
    border-radius: 3px;
    color: #a9baff;
    text-decoration: none;

    &:hover {
        background-color: #5865f2;
        color: #fff;
    }
}

tbody tr {
    transition: background-color 0.2s ease;

    &:hover {
        background: #242428;
    }
}

.tooltip {
    color: #007bff;
    position: relative;
    display: inline-block;
    cursor: help;
    margin-left: 0.4rem;

    .tooltip-text {
        visibility: hidden;
        opacity: 0;
        width: max-content;
        max-width: 250px;
        background-color: #333;
        color: #fff;
        text-align: left;
        border-radius: 4px;
        padding: 0.5rem;
        position: absolute;
        z-index: 10;
        bottom: 125%;
        left: 50%;
        transform: translateX(-50%);
        transition: opacity 0.3s ease;
        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
        pointer-events: none;
    }

    &:hover .tooltip-text {
        visibility: visible;
        opacity: 1;
    }
}

.tag-container {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
}

.tag {
    color: #82838b;
    border: 1px solid #97979f33;
    background-color: #121214;
    border-radius: 8px;
    padding: 0.4rem;
    cursor: pointer;
    transition: background-color 0.2s ease, color 0.2 ease;
}

.tag:hover {
    background-color: #1d1d1e;
    color: #efeff0;
}

.tag.selected {
    background-color: #2c2c30;
    color: white;
}

.libro-editado {
    background-color: #25201c;
    border-left: 2px solid #ce9c5c;
    transition: background-color 0.2s ease;

    &:hover {
        background-color: #312d29;
    }
}

#clear-filters-button {
    padding: 0.5rem 1rem;
    border-radius: 0.5rem;
    background-color: #202024;
    color: #f57976;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease;

    &:hover {
      background-color: #35292d;
    }
}

#numero-resultados {
    font-weight: bold;
}

.report-button {
    padding: 0.5rem 0.75rem;
    border-radius: 0.5rem;
    background-color: #202024;
    border: none;
    color: #f57976;
    cursor: pointer;
    transition: background-color 0.3s ease;

    &:hover {
        background-color: #35292d;
    }
}

#barra-inferior {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0.1rem 0.8rem;
    background-color: #202024;
}

// NAVBAR

.navbar {
    width: 80px;
    background-color: #121214;
    border-right: 1px solid #6d6e771f;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    gap: 1rem;
}

.navbar ul {
    padding: 0 1rem;
    list-style: none;
}

.navbar ul li {
    border-radius: 0.5rem;
    background-color: #1d1d1e;
    border: none;
    color: #fff;
    font-size: 26px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-bottom: 1rem;
    width: 100%;
    height: 32%;
    display: flex;
    align-items: center;
    justify-content: center;

    &:hover {
        background-color: #5764f0;
    }
}

